--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.0",
     "core-js": "^3.6.5",
+    "swiper": "^6.8.4",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
